--- a/quickMacro.1
+++ b/quickMacro.1
@@ -14,8 +14,7 @@ until `QUITKEY` is pressed again. The time of the first
 Play back the macro by sending all events as XTEST requests.
 .TP 8
 .B --loop
-Play the macro until `QUITKEY` is pressed. The macro
-finishes playing before the program exits.
+Play the macro until `QUITKEY` is pressed.
 .SH IMPORTANT CONSIDERATIONS
 Each event takes up 32 bytes in the macro file. Mouse events
 occur at a very fast frequency and thus can quickly take up
