--- a/quickMacro.1
+++ b/quickMacro.1
@@ -31,6 +31,7 @@ allbox;
 lb lb
 l l.
 Return Value	Meaning
+-1	Unknown event type
 11	X server connect failed or extension is not running
 21	File is specified is not regular
 22	Argument error
